<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_editG_grupo"
        android:orderInCategory="100"
        android:title="@string/action_editG" />

    <item
        android:id="@+id/action_deleteG_grupo"
        android:orderInCategory="101"
        android:title="@string/action_deleteG" />

    <item
        android:id="@+id/action_add_lending_grupo"
        android:orderInCategory="101"
        android:title="@string/action_add_lending" />

    <item
        android:id="@+id/action_add_payment_grupo"
        android:orderInCategory="101"
        android:title="@string/action_add_payment" />
    <!--<item
        android:id="@+id/action_add_cliente"
        android:orderInCategory="101"
        android:title="@string/action_add_payment" />-->

</menu>
